--- a/find-back/package.json
+++ b/find-back/package.json
@@ -32,7 +32,8 @@
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
