--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
 		"react-router-bootstrap": "^0.25.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.3.1",
+		"reactjs-popup": "^1.5.0",
 		"reactstrap": "^8.4.1",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0"
